# deep_research_agent

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
agents/: __init__.py  lead_agent.py  sub_agent.py
backend/: .gitignore  app.py  backend  main.py  requirements.txt
backend/agents/: lead_agent.py  query_analyzer.py  sub_agent.py
backend/api/: __init__.py  dependencies.py  models.py  routes.py
backend/config/: settings.py
backend/middleware/: rate_limit.py
backend/services/: ai_service.py
backend/utils/: activity.py  auth.py  prompts.py
config/: settings.py
frontend/: .env.example  README.md  index.html  package.json  vite.config.ts.timestamp-1769913350163-156ba7c10386e.mjs
frontend/src/: App.tsx  index.css
frontend/src/components/: ActivityFeed.tsx  ResearchPDF.tsx  ResearchResults.tsx  SearchForm.tsx  Sidebar.tsx  SuggestionCards.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts  pdf.ts
frontend/src/pages/: Index.tsx
services/: search_service.py
