[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cerebras-cloud-sdk>=1.56.1",
    "exa-py>=2.0.0",
    "fastapi>=0.120.4",
    "pydantic>=2.12.3",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]
